--- a/PYME/src/main/webapp/views/consecutivo/consecutivo.xhtml
+++ b/PYME/src/main/webapp/views/consecutivo/consecutivo.xhtml
@@ -3,11 +3,15 @@
 	<ui:composition xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      template="/template/template.xhtml">
 			
-				<form >
-						Sistema de Inventario
-				</form>
+				<ui:define name="content">
+						Pagina uno
+				
+				</ui:define>
+				
+			
 			
 	</ui:composition>
 
